# wizlightcpp

./: CMakeLists.txt  LICENSE.md  Makefile  README.md
cmake/toolchain/: arm_toolchain.cmake
cmake/toolchain/example/: aarch64_toolchain.cmake
include/: bulb.h  log.h  udp.h  wizControl.h  wiz_control.h  wizcontrol.h
src/: bulb.cpp  log.cpp  main.cpp  udp.cpp  wizControl.cpp  wiz_control.cpp  wizcontrol.cpp
